# ms-teams-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: auto-tag.yml  ci.yml  release.yml
docs/: README.md  attachments-spec.md  auth-implementation-plan.md  auth.md  command-reference.md  examples.md  faq.md  release-readiness.md  teams-cli-prd.md  troubleshooting.md  use-cases.md
docs/man/: teams-agent-contract.7  teams-auth.7  teams-config.5  teams-examples.7  teams.1
docs/quickstarts/: README.md  agency-client-comms.md  agent.md  enterprise-admin.md  local.md  windows.md
src/: config.rs  error.rs  main.rs
src/api/: apps.rs  channels.rs  chats.rs  client.rs  endpoints.rs  files.rs  meetings.rs  messages.rs  mod.rs  notifications.rs  presence.rs  resolve.rs  search.rs  subscriptions.rs  tags.rs  teams.rs  users.rs
src/auth/: auth_code_pkce.rs  client_credentials.rs  device_code.rs  keyring.rs  mod.rs  refresh.rs  token.rs
src/cli/: app.rs  auth.rs  channel.rs  chat.rs  config_cmd.rs  file.rs  listen.rs  meeting.rs  message.rs  message_attachments.rs  message_media.rs  mod.rs  notification.rs  presence.rs  search.rs  subscribe.rs  tab.rs  tag.rs  team.rs  user.rs
src/listen/: handler.rs  mod.rs
src/models/: app.rs  attachment_inventory.rs  channel.rs  chat.rs  common.rs  file.rs  meeting.rs  member.rs  message.rs  mod.rs  notification.rs  presence.rs  search.rs  subscription.rs  tag.rs  team.rs  user.rs
src/output/: json.rs  mod.rs  plain.rs  progress.rs  table.rs
tests/: cli.rs
