[package]
name = "teams-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["OSO DevOps"]
description = "A Rust CLI for Microsoft Teams — agent-first design"
repository = "https://github.com/osodevops/ms-teams-cli"
readme = "README.md"
keywords = ["teams", "microsoft", "cli", "graph-api", "mcp"]
categories = ["command-line-utilities"]

[[bin]]
name = "teams"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
hyper = { version = "1", features = ["server", "http1"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["server", "tokio"] }
webbrowser = "1"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
comfy-table = "7"
indicatif = "0.17"
atty = "0.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
thiserror = "2"
anyhow = "1"
urlencoding = "2"
bytes = "1"
mime_guess = "2"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[features]
integration = []

[profile.release]
lto = true
codegen-units = 1
strip = true
